--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,8 @@ $font-family-sans-serif:
   // Emoji fonts
   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
-.h1{
-	font:Times New Roman;
+h1 {
+	font-family:$font-family-sans-serif;
+	font-size:60px;
+	color:#88fc03;
 }
