--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
+@import "loginbutton";
+
 $font-family-sans-serif:
   // Safari for OS X and iOS (San Francisco)
   -apple-system,
@@ -16,4 +18,31 @@ h1 {
 	font-family:$font-family-sans-serif;
 	font-size:60px;
 	color:#88fc03;
+	text-align:center;
 }
+
+h2 {
+	text-align:center;
+}
+
+button {
+	float:right;
+	margin: 10px;
+}
+
+img {
+	margin: 10px;
+	width:100px;
+	height:auto;
+	float: left;
+}
+
+section {
+	clear:both;
+}
+
+#register {
+	float: right;
+	margin: 10px;
+}
+
