--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import "loginbutton";
+@import url('https://fonts.googleapis.com/css?family=Cabin|Montserrat&display=swap');
 
 $font-family-sans-serif:
   // Safari for OS X and iOS (San Francisco)
@@ -15,26 +16,33 @@ $font-family-sans-serif:
   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
 h1 {
-	font-family:$font-family-sans-serif;
-	font-size:60px;
-	color:#88fc03;
+	font-family:"Cabin",$font-family-sans-serif,sans-serif;
+	font-size:120px;
+	color:#32cd32;
 	text-align:center;
 }
 
 h2 {
 	text-align:center;
+	color:white;
 }
+
+#dashboard {
+		clear: both;
+	}
+
 
 button {
-	float:right;
-	margin: 10px;
+	display:block;
+	margin: auto;
 }
 
-img {
-	margin: 10px;
-	width:100px;
+#logo {
+	display:block;
+	margin: auto;
+	margin-top: 20px;
+	width:200px;
 	height:auto;
-	float: left;
 }
 
 section {
@@ -46,3 +54,20 @@ section {
 	margin: 10px;
 }
 
+#mid {
+	padding: 30px 0;
+	background-color: black;
+	font-family:"Montserrat";
+}
+
+footer {
+	margin-top: 40px;
+	text-align:center;
+}
+
+#login {
+	margin-top:30px;
+	border-radius: 10px;
+	font-size:20pt;
+
+}
